--- a/RoutingMicroservice/RoutingMicroservice.csproj
+++ b/RoutingMicroservice/RoutingMicroservice.csproj
@@ -204,6 +204,7 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\FIRoutingMicroservice - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\RoutingMicroservice20190212042550 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
